force-app/main/default/objects/OPP_Application__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>People Connect</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Finance and Accounting</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>SSHE</fullName>
                </value>
                <value>
                    <fullName>Procurement &amp; Contract</fullName>
                </value>
                <value>
                    <fullName>Operation</fullName>
                </value>
                <value>
                    <fullName>Governance and Compliance</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                    <isActive>false</isActive>
                    <label>Notification</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL_Android__c</fullName>
        <label>URL Android</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_IOS__c</fullName>
        <label>URL IOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Web__c</fullName>
        <label>URL Web</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Applications</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>URL_Web__c</columns>
        <columns>Notification__c</columns>
        <columns>Default__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_App_Notification</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>URL_Web__c</columns>
        <columns>URL_Android__c</columns>
        <columns>URL_IOS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Notification__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All App Notification</label>
    </listViews>
    <listViews>
        <fullName>All_App_Store</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>URL_Web__c</columns>
        <columns>URL_Android__c</columns>
        <columns>URL_IOS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All E-Application</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>